# cvp-electron-app-batch-photo-renaming-and-metadata-organizer-cmd6768k

./: AI_PROJECT_PROMPT.md  BLUEPRINT.json  FEATURES.json  PROJECT_DETAILS.json  README.md  TECHNICAL_STACK.json  index.html  main.js  main.py  preload.js  pyproject.toml  renderer.js
